[package]
name = "element-ptr"
version = "0.0.1"
description = "A macro to make accessing elements through raw pointers easier."

edition = "2021"
authors = ["Yurihaia <17830663+Yurihaia@users.noreply.github.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
element-ptr-macro = { path = "element-ptr-macro", version = "0.0.1" }

[workspace]
members = ["element-ptr-macro", "quote_into_hack"]
