[package]
name = "element-ptr-macro"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
syn = "2"
quote = "1"
proc-macro2 = "1"
quote_into_hack = { path = "../quote_into_hack", version = "0.0.1" }