[package]
name = "element-ptr-macro"
version = "0.0.1"
edition = "2021"
description = "The internal macro crate for `element-ptr`."
authors = ["Yurihaia <17830663+Yurihaia@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/Yurihaia/element-ptr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
# Enables a performance optimization that relies on private api in the `quote` crate.
# If a `quote_into` macro ever gets added, this will be able to be removed.
quote_into_hack = []

[dependencies]
proc-macro-crate = "3"
syn = "2"
quote = "1"
proc-macro2 = "1"